; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/extr_rgb_matrix.c_rgb_matrix_none.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/extr_rgb_matrix.c_rgb_matrix_none.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@led_min = common dso_local global i64 0, align 8
@led_max = common dso_local global i64 0, align 8
@DRIVER_LED_TOTAL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @rgb_matrix_none to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rgb_matrix_none(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %30

10:                                               ; preds = %1
  %11 = load i64, i64* @led_min, align 8
  %12 = load i64, i64* @led_max, align 8
  %13 = call i32 @RGB_MATRIX_USE_LIMITS(i64 %11, i64 %12)
  %14 = load i64, i64* @led_min, align 8
  store i64 %14, i64* %4, align 8
  br label %15

15:                                               ; preds = %22, %10
  %16 = load i64, i64* %4, align 8
  %17 = load i64, i64* @led_max, align 8
  %18 = icmp slt i64 %16, %17
  br i1 %18, label %19, label %25

19:                                               ; preds = %15
  %20 = load i64, i64* %4, align 8
  %21 = call i32 @rgb_matrix_set_color(i64 %20, i32 0, i32 0, i32 0)
  br label %22

22:                                               ; preds = %19
  %23 = load i64, i64* %4, align 8
  %24 = add nsw i64 %23, 1
  store i64 %24, i64* %4, align 8
  br label %15

25:                                               ; preds = %15
  %26 = load i64, i64* @led_max, align 8
  %27 = load i64, i64* @DRIVER_LED_TOTAL, align 8
  %28 = icmp slt i64 %26, %27
  %29 = zext i1 %28 to i32
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %25, %9
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @RGB_MATRIX_USE_LIMITS(i64, i64) #1

declare dso_local i32 @rgb_matrix_set_color(i64, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
